--- a/res/css/style.css
+++ b/res/css/style.css
@@ -76,7 +76,7 @@
   background: url("../images/bg-parallax7.jpg");
 }
 #home-bg-slideshow .bg-slideshow-wrapper .slides > .bg-cover:nth-child(2) {
-  background: url("../images/bg-parallax5.png");
+  background: url("../images/bg-parallax8.jpg");
 }
 #home-bg-slideshow .bg-slideshow-wrapper .slides > .bg-cover:nth-child(3) {
   background: url("../images/bg-parallax6.png");
@@ -647,10 +647,10 @@
   padding-bottom: 25px;
 }
 .footer-logo img {
-  width: 120px;
+  width: 220px;
 }
 .footer .disclaimer {
-  padding-bottom: 25px;
+  padding-bottom: 0px;
   font-size: 14px;
 }
 .footer-social {
