--- a/res/css/main.css
+++ b/res/css/main.css
@@ -197,6 +197,13 @@ form label.error {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .5)
 }
 
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(210, 210, 210, 1);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .7);
+  -moz-box-shadow: inset 0 0 6px rgba(0, 0, 0, .7);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, .7)
+}
+
 ::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(210, 210, 210, .4)
 }
