--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ input, button, textarea {
 }
 
 strong {
-	color: #f36046;
+	color: #FF2B06;
 	font-size: 17px;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.438);
 }
